[package]
name = "keplerian-elements"
version = "0.2.0"
authors = ["Dzejkop <jakubtrad@gmail.com>"]
edition = "2021"
repository = "https://github.com/Dzejkop/keplerian-elements"
description = "A library for working with orbits and keplerian elements"
readme = "README.md"
license = "MIT"

[dependencies]
glam = "0.22"

[dev-dependencies]
bevy = "0.9"
bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }
smooth-bevy-cameras = "0.7"
bevy_egui = "0.19"
test-case = "3.3.1"

[features]
default = [ "f32" ]
f32 = []
f64 = []
