[package]
name = "keplerian-elements"
version = "0.2.0"
authors = ["Dzejkop <jakubtrad@gmail.com>"]
edition = "2021"
repository = "https://github.com/Dzejkop/keplerian-elements"
description = "A library for working with orbits and keplerian elements"
readme = "README.md"
license = "MIT"

[dependencies]
glam = "0.24.2"
serde ={ version = "1.0", optional = true }

[dev-dependencies]
bevy = "0.12.1"
smooth-bevy-cameras = "0.10"
bevy_egui = "0.23"
test-case = "3.3.1"

[features]
default = [ "f32" ]
f32 = []
f64 = []
serde = [ "dep:serde" ]

