[package]
name = "keplerian-elements"
version = "0.2.0"
authors = ["Dzejkop <jakubtrad@gmail.com>"]
edition = "2021"
repository = "https://github.com/Dzejkop/keplerian-elements"
description = "A library for working with orbits and keplerian elements"
readme = "README.md"
license = "MIT"

[workspace]
members = [ "crates/orbit_viewer" ]

[dependencies]
glam = "0.24.2"
serde ={ version = "1.0", optional = true }

[dev-dependencies]
test-case = "3.3.1"

[features]
default = [ "f32" ]
f32 = []
f64 = []
serde = [ "dep:serde" ]

