[package]
name = "orbit-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keplerian-elements = { path = "../.." }
glam = "0.24.2"
serde ={ version = "1.0", optional = true }
bevy = "0.12.1"
smooth-bevy-cameras = "0.10"
bevy_egui = "0.23"
test-case = "3.3.1"
